--- a/webd/layoutB-1.html
+++ b/webd/layoutB-1.html
@@ -127,8 +127,7 @@
             <div class="header-container">
                 <h1 class="logo">
                 </h1>
-                <nav class="nav">
-                </nav>
+                <nav class="nav"></nav>
             </div>
         </header>
         <!--//header-->
