--- a/Javascript/object02.html
+++ b/Javascript/object02.html
@@ -12,7 +12,7 @@
 <body>
     <header id="header">
         <h1>
-            <a href="index.html">Javascript</a>
+            <a href="index.html">javascript</a>
         </h1>
         <nav>
             <ul>
@@ -29,42 +29,330 @@
                 <li><a href="object05.html">브라우저 객체</a></li>
                 <li><a href="object06.html">요소 객체</a></li>
                 <li><a href="object07.html">이벤트 객체</a></li>
-                <li><a href="test.html">연습</a></li>
             </ul>
         </nav>
     </header>
     <!-- //header -->
+
     <main id="main">
         <div class="main__menu container">
             <ul>
+                <li><a href="#">01. <em>at()</em> 메서드는 지정한 숫자(index)를 받아, 배열에서 해당 되는 인덱스의 요소를 반환합니다.</a></li>
+                <li><a href="#">02. <em>concat()</em> 메서드는 둘 이상의 배열을 결합하여, 새로운 배열을 반환합니다.</a></li>
+                <li><a href="#">03. <em>copyWithin()</em> 메서드는 배열의 일부를 얕게 복사한 뒤, 동일한 배열의 다른 위치에 덮어쓰고 그 배열을 반환합니다</a>
+                </li>
+                <li><a href="#">04. <em>entries()</em> 메서드는 배열의 각 인덱스에 대한 속성 값을 반환합니다</a></li>
+                <li><a href="#">05. <em>keys()</em> 메서드는 배열의 각 인덱스에 대한 키 값을 반환합니다.</a></li>
+                <li><a href="#">06. <em>fill()</em> 메서드는 배열의 시작 인덱스부터 끝 인덱스까지 하나의 값으로 반환합니다.</a></li>
+                <li><a href="#">07. <em>find()</em>💛💛 메서드는 주어진 판별 함수를 만족하는 첫 번째 요소의 값을 반환합니다</a></li>
+                <li><a href="#">08. <em>findIndex()</em> 메서드는 주어진 판별 함수를 만족하는 첫 번째 요소의 값을 인덱스로 반환합니다</a></li>
+                <li><a href="#">09. <em>findLast()</em> 메서드는 주어진 판별 함수를 만족하는 첫 번째 요소의 값을 역순으로 반환합니다</a></li>
+                <li><a href="#">10. <em>findLastIndex()</em> 메서드는 주어진 판별 함수를 만족하는 첫 번째 요소의 값을 역순 인덱스로 반환합니다</a></li>
+                <li><a href="#">11. <em>flat()</em> 메서드는 중첩된 배열을 하나의 배열로 반환합니다.</a></li>
+                <li><a href="#">12. <em>flatMap()</em> 메서드는 먼저 매핑함수를 사용해 각 엘리먼트에 대해 map 수행 후, 결과를 새로운 배열로 평탄화합니다.</a>
+                </li>
+                <li><a href="#">13. <em>forEach()</em>💛💛💛 메서드는 주어진 함수 조건을 배열 요소 각각에 대해 실행하고, 그 결과를 반환합니다.</a></li>
+                <li><a href="#">14. <em>filter()</em> 메서드는 주어진 함수 조건에 맞는 모든 요소를 새로운 배열로 반환합니다.</a></li>
+                <li><a href="#">15. <em>every()</em> 메서드는 주어진 함수를 모두 통과하는지 확인하고, 불린(true, false)로 반환합니다.</a></li>
+                <li><a href="#">16. <em>map()</em>💛💛💛 메서드는 주어진 함수를 호출하고, 그 결과를 모아서 만든 새로운 배열을 반환합니다.</a></li>
+                <li><a href="#">17. <em>some()</em> 메서드는 주어진 판별 함수를 통과하는지 테스트하여, 그 그결과를 불린(true, false)로 반환합니다.</a></li>
+                <li><a href="#">18. <em>includes()</em>💛 메서드는 배열 포함 여부를 검색하여, 불린(true, false)을 반환합니다.</a></li>
+                <li><a href="#">19. <em>indexOf()</em>💛 메서드는 배열을 검색하고, 위치값(숫자)을 반환합니다.</a></li>
+                <li><a href="#">20. <em>lastIndexOf()</em> 메서드는 역순으로 배열을 검색하고, 위치값(숫자)을 반환합니다.</a></li>
+                <li><a href="#">21. <em>join()</em>💛 메서드는 배열의 요소를 추가하여, 하나의 문자열로 반환합니다.</a></li>
+                <li><a href="#">22. <em>pop()</em> 메서드는 배열 마지막 요소를 제거하고, 제거한 요소를 반환합니다.</a></li>
+                <li><a href="#">23. <em>push()</em>💛💛 메서드는 배열 끝에 요소를 추가하고, 배열의 새로운 길이값을 반환합니다.</a></li>
+                <li><a href="#">24. <em>reduce()</em> 메서드는 배열의 각 요소를 실행하고, 하나의 결과값을 반환합니다.</a></li>
+                <li><a href="#">25. <em>reduceRight()</em> 메서드는 배열의 각 요소를 마지막부터 실행하고, 하나의 결과값을 반환합니다.</a></li>
+                <li><a href="#">26. <em>reverse()</em> 메서드는 배열 요소의 순서를 반대로 하고, 반대로 된 배열을 반환합니다.</a></li>
+                <li><a href="#">27. <em>shift()</em> 메서드는 배열 처음 요소를 제거하고, 제거한 요소를 반환합니다.</a></li>
+                <li><a href="#">28. <em>unshift()</em> 메서드는 배열 앞에 요소를 추가하고, 배열의 새로운 길이 값을 반환합니다.</a></li>
+                <li><a href="#">29. <em>slice()</em>💛 메서드는 배열 시작 위치에서 종료 위치 값을 추출하여, 새로운 배열을 반환합니다.</a></li>
+                <li><a href="#">30. <em>splice()</em>💛 메서드는 배열의 기존 요소를 삭제 또는 교체하거나 새 요소를 추가하여 배열의 내용을 변경합니다.</a></li>
+                <li><a href="#">31. <em>sort()</em>💛 메서드는 배열의 요소를 적절한 위치에 정렬한 후, 그 배열을 반환합니다</a></li>
+                <li><a href="#">32. <em>toLocaleString()</em> 메서드는 배열의 요소를 문자열로 반환합니다.</a></li>
+                <li><a href="#">33. <em>toString()</em> 메서드는 데이터를 배열로 변환하고, 새로운 배열을 반환합니다.</a></li>
+                <li><a href="#">34. <em>values()</em> 메서드는 배열 각 인덱스에 대한 값을 객체로 반환합니다.</a></li>
 
             </ul>
         </div>
-        <!-- //main__menu container -->
         <div class="main__sample container">
             <div id="sample01" class="sample">
-                <h3></h3>
-                <p>
+                <h3>01. find()</h3>
+                <p class="notice">주어진 판별 함수를 만족하는 배열의 첫 번째 요소를 반환하는 JavaScript의 배열 메서드입니다.
+                    요소를 찾지 못하면 undefined를 반환합니다.
+                    조건을 만족하는 첫 번째 요소만을 반환하며, 그 이후의 요소는 고려하지 않습니다.
+                    조건을 만족하는 모든 요소를 찾고 싶다면 filter() 메서드를 사용해야 합니다.</p>
 
-                </p>
-                <pre><code></code></pre>
-                <div class="reuslt">
+
+
+                <pre class="javascript"><code>{
+const numbers = [10, 20, 30, 40, 50];
+
+const found = numbers.find(function(element) {
+    return element > 25;
+});
+
+console.log(found);
+}</code></pre>
+                <div class="result">
                     <details>
                         <summary>결과 확인하기</summary>
                         <div>
-
+                            30<br>
                         </div>
                     </details>
                 </div>
             </div>
+            <!-- //sampe01 -->
+            <div id="sample02" class="sample">
+                <h3>02. forEach()</h3>
+                <p class="notice">배열의 각 요소에 대해 주어진 함수를 실행하는 JavaScript의 배열 메서드입니다.
+                    배열의 각 요소에 대해 반복하면서 지정된 함수를 호출합니다.</p>
+
+
+
+                <pre class="javascript"><code>{
+const numbers = [1, 2, 3, 4, 5];
+
+numbers.forEach(function(element) {
+    console.log(element);
+});
+}</code></pre>
+                <div class="result">
+                    <details>
+                        <summary>결과 확인하기</summary>
+                        <div>
+                            1<br>
+                            2<br>
+                            3<br>
+                            4<br>
+                            5<br>
+                        </div>
+                    </details>
+                </div>
+            </div>
+            <!-- //sampe02 -->
+            <div id="sample03" class="sample">
+                <h3>03. map()</h3>
+                <p class="notice">배열 내의 모든 요소에 대해 주어진 함수를 호출한 결과를 모아서 새로운 배열을 반환하는 JavaScript의 배열 메서드입니다.
+                    원본 배열을 변경하지 않으며, 변환된 배열을 반환합니다.</p>
+
+
+
+                <pre class="javascript"><code>{
+const numbers = [1, 2, 3, 4, 5];
+
+const squaredNumbers = numbers.map(function(element) {
+    return element * element;
+});
+
+console.log(squaredNumbers);
+}</code></pre>
+                <div class="result">
+                    <details>
+                        <summary>결과 확인하기</summary>
+                        <div>
+                            [1, 4, 9, 16, 25]<br>
+                        </div>
+                    </details>
+                </div>
+            </div>
+            <!-- //sampe03 -->
+            <div id="sample04" class="sample">
+                <h3>04. includes()</h3>
+                <p class="notice">includes() 메소드는 문자열에 특정 문자열 또는 문자가 포함되어 있는지를 확인하는 JavaScript의 메소드입니다.
+                    부분 문자열이 포함되어 있는 경우 true를 반환
+                    그렇지 않은 경우 false를 반환합니다.</p>
+
+
+
+
+                <pre class="javascript"><code>{
+const str = 'Hello, world!';
+
+console.log(str.includes('world'));
+console.log(str.includes('foo'));
+}</code></pre>
+                <div class="result">
+                    <details>
+                        <summary>결과 확인하기</summary>
+                        <div>
+                            true<br>
+                            false<br>
+                        </div>
+                    </details>
+                </div>
+            </div>
+            <!-- //sampe04 -->
+            <div id="sample05" class="sample">
+                <h3>05. join()</h3>
+                <p class="notice">배열의 모든 요소를 하나의 문자열로 결합하여 반환하는 JavaScript의 배열 메서드입니다.
+                    각 요소 사이에는 지정한 구분자를 넣어줄 수 있습니다. 만약 구분자를 지정하지 않으면 기본적으로 쉼표가 사용됩니다.
+                    만약 배열의 요소가 객체인 경우, 각 객체는 자동으로 toString() 메서드를 통해 문자열로 변환됩니다.</p>
+
+
+
+
+                <pre class="javascript"><code>{
+const fruits = ["apple", "banana", "orange"];
+const result = fruits.join(", ");
+
+console.log(result);
+}</code></pre>
+                <div class="result">
+                    <details>
+                        <summary>결과 확인하기</summary>
+                        <div>
+                            "apple, banana, orange"<br>
+                        </div>
+                    </details>
+                </div>
+            </div>
+            <!-- //sampe05 -->
+            <div id="sample06" class="sample">
+                <h3>06. indexOf()</h3>
+                <p class="notice">indexOf() 메소드는 문자열에서 지정된 문자열 또는 문자의 첫 번째 발생 위치를 반환합니다.
+                    문자열에 지정된 문자열 또는 문자가 포함되어 있지 않으면 -1을 반환합니다.</p>
+
+
+
+
+                <pre class="javascript"><code>{
+const str = 'Hello, world!';
+
+console.log(str.indexOf('world'));
+console.log(str.indexOf('foo'));
+}</code></pre>
+                <div class="result">
+                    <details>
+                        <summary>결과 확인하기</summary>
+                        <div>
+                            7<br>
+                            -1<br>
+                        </div>
+                    </details>
+                </div>
+            </div>
+            <!-- //sampe06 -->
+            <div id="sample07" class="sample">
+                <h3>07. push()</h3>
+                <p class="notice">배열의 끝에 하나 이상의 요소를 추가하는 JavaScript의 배열 메서드입니다.
+                    배열의 길이를 변경하고, 새로운 요소를 배열의 끝에 추가합니다.</p>
+
+
+
+
+                <pre class="javascript"><code>{
+const fruits = ["apple", "banana"];
+fruits.push("orange");
+
+console.log(fruits);
+}</code></pre>
+                <div class="result">
+                    <details>
+                        <summary>결과 확인하기</summary>
+                        <div>
+                            ["apple", "banana", "orange"]<br>
+                        </div>
+                    </details>
+                </div>
+            </div>
+            <!-- //sampe07 -->
+            <div id="sample08" class="sample">
+                <h3>08. slice()</h3>
+                <p class="notice">문자열이나 배열에서 지정한 위치의 부분을 추출하여 새로운 문자열이나 배열을 반환하는 JavaScript의 내장 함수입니다.
+                    메서드는 원본 문자열이나 배열을 변경하지 않고, 추출된 부분을 포함하는 새로운 문자열이나 배열을 반환합니다.
+                </p>
+
+
+                <pre class="javascript"><code>{
+const str = "Hello, world!";
+const slicedStr = str.slice(7);
+
+console.log(slicedStr);
+}</code></pre>
+                <div class="result">
+                    <details>
+                        <summary>결과 확인하기</summary>
+                        <div>
+                            "world!"<br>
+                        </div>
+                    </details>
+                </div>
+            </div>
+            <!-- //sampe08 -->
+            <div id="sample09" class="sample">
+                <h3>09. splice()</h3>
+                <p class="notice">배열의 내용을 변경하고, 삭제된 요소를 포함하는 새로운 배열을 반환하는 JavaScript의 배열 메서드입니다.
+                    배열의 특정 위치에서 요소를 추가, 삭제, 또는 교체할 수 있습니다.
+                    세 가지 매개변수
+                    시작 인덱스: 요소를 추가, 삭제, 또는 교체할 시작 위치를 지정합니다.
+                    삭제할 요소의 개수: 시작 위치부터 삭제할 요소의 개수를 지정합니다.
+                    추가할 요소: 선택적으로 추가할 요소를 지정합니다. 이러한 요소는 시작 위치부터 추가됩니다.</p>
+
+
+
+
+                <pre class="javascript"><code>{
+                    const fruits = ["apple", "banana", "orange", "grape"];
+
+                    const deletedItems = fruits.splice(2, 1);
+                    
+                    console.log(fruits);
+                    console.log(deletedItems);
+}</code></pre>
+                <div class="result">
+                    <details>
+                        <summary>결과 확인하기</summary>
+                        <div>
+                            ["apple", "banana", "grape"]<br>
+                            ["orange"]<br>
+                        </div>
+                    </details>
+                </div>
+            </div>
+            <!-- //sampe09 -->
+            <div id="sample10" class="sample">
+                <h3>10. sort()</h3>
+                <p class="notice">배열의 요소를 정렬하여 해당 배열을 변경하는 JavaScript의 배열 메서드입니다.
+                    본적으로 배열은 Unicode 코드 포인트에 따라 문자열로 변환되어 정렬됩니다.
+                    정렬은 기본적으로 오름차순(ascending)으로 이루어집니다.</p>
+
+
+
+
+                <pre class="javascript"><code>{
+const fruits = ["banana", "apple", "orange"];
+
+fruits.sort();
+
+console.log(fruits);
+}</code></pre>
+                <div class="result">
+                    <details>
+                        <summary>결과 확인하기</summary>
+                        <div>
+                            ["apple", "banana", "orange"]<br>
+                        </div>
+                    </details>
+                </div>
+            </div>
+            <!-- //sampe10 -->
+
+
         </div>
-        <!-- sample01 -->
+        <!-- //main__sample -->
+    </main>
+    <!-- //main -->
 
-        <script src="assets/js/highlight.min.js"></script>
-        <script>hljs.highlightAll();</script>
-        <script>
+    <footer id="footer">
 
-        </script>
+    </footer>
+    <!-- //footer -->
+
+    <script src="assets/js/highlight.min.js"></script>
+    <script>hljs.highlightAll();</script>
 </body>
 
 </html>
