--- a/webd/index.html
+++ b/webd/index.html
@@ -107,7 +107,7 @@
                 <li><a href="cate.html">Layout</a></li>
                 <li><a href="cate.html">Menu</a></li>
                 <li><a href="cate.html">Slider</a></li>
-                <li><a href="cate.html">Site</a></li>
+                <li><a href="site/">Site</a></li>
             </ul>
         </nav>
     </main>
